--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+body {
+    font-family: Arial;
+}
+
 h1 {
     text-align: center;
 }
@@ -10,23 +14,44 @@ h1 {
     text-align: center;
 }
 
-img {
-    display: block;
+.img-centered {
     margin: 0 auto;
+    display: block;
+
 }
 
 .vert {
-    color:green;
+    color: green;
 }
-
-li {
-    list-style-type: lower-alpha;
-}
-
-
 
 .haut {
     width: 25px;
     height: 25px;
     float: left;
+}
+
+ol {
+    list-style-type: lower-alpha;
+}
+
+ul {
+    list-style-type: square;
+}
+
+li > ul {
+    list-style-type: circle;
+}
+
+.retour {
+    display: flex;
+    justify-content: flex-start;
+}
+
+.retour a {
+    align-self: flex-end;
+}
+
+.best-buy {
+    width: 800px;
+    height: 400px;
 }
